hello_world/EKS/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-internal
  labels:
    run: nginx-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nginx
